<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@color/colorPrimaryDark"
    tools:context="com.example.olijefavour.med_manager.AllMonths"

    android:orientation="vertical">
    <!--android:background="#dadbde"-->
    <LinearLayout
        android:id="@+id/month_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <!--"#303F9F"-->
        <TextView
            android:id="@+id/january"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical|center_horizontal"
            android:layout_margin="8dp"
            android:textSize="22dp"

            android:text="@string/january"
            android:textColor="#303F9F"
             />




        <TextView
            android:id="@+id/febrary"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="february"
            android:layout_margin="8dp"
            android:text="@string/february"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"/>


        <TextView
            android:id="@+id/march"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="march"
            android:visibility="gone"
            android:layout_margin="8dp"
            android:text="@string/march"
            android:textColor="@color/colorPrimary"/>




        <TextView
            android:id="@+id/april"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="april"
            android:visibility="gone"
            android:layout_margin="8dp"
            android:text="@string/april"
            android:textColor="@color/colorPrimary"/>




        <TextView
            android:id="@+id/may"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:visibility="gone"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="may"
            android:layout_margin="8dp"
            android:text="@string/may"
            android:textColor="@color/colorPrimary"/>



        <TextView
            android:id="@+id/june"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="june"
            android:visibility="gone"
            android:layout_margin="8dp"
            android:text="@string/june"
            android:textColor="@color/colorPrimary"/>




        <TextView
            android:id="@+id/july"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="july"
            android:visibility="gone"
            android:layout_margin="8dp"
            android:text="@string/july"
            android:textColor="@color/colorPrimary"/>




        <TextView
            android:id="@+id/august"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="august"
            android:layout_margin="8dp"
            android:visibility="gone"
            android:text="@string/august"
            android:textColor="@color/colorPrimary"/>



        <TextView
            android:id="@+id/september"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="september"
            android:visibility="gone"
            android:layout_margin="8dp"
            android:text="@string/september"
            android:textColor="@color/colorPrimary"/>



        <TextView
            android:id="@+id/october"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="october"
            android:visibility="gone"
            android:layout_margin="8dp"
            android:text="@string/october"
            android:textColor="@color/colorPrimary"/>



        <TextView
            android:id="@+id/november"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="november"
            android:visibility="gone"
            android:layout_margin="8dp"
            android:text="@string/november"
            android:textColor="@color/colorPrimary"/>




        <TextView
            android:id="@+id/december"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="gone"
            android:onClick="december"
            android:layout_margin="8dp"
            android:text="@string/december"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/mainviewpager"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        >

    </android.support.v4.view.ViewPager>

    <!--<GridView-->
        <!--android:id="@+id/gridview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:padding="14dp"-->
        <!--android:gravity="center"-->
        <!--android:columnWidth="120dp"-->
        <!--android:numColumns="auto_fit"-->
        <!--android:verticalSpacing="24dp"-->
        <!--android:horizontalSpacing="1dp"-->
        <!--android:stretchMode="spacingWidthUniform"/>-->

    <!--<GridLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:padding="14dp"-->
        <!--android:columnOrderPreserved="false">-->

        <!--<android.support.v7.widget.CardView-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_columnWeight="1"-->
            <!--android:layout_rowWeight="1"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginRight="16dp"-->
            <!--app:cardElevation="8dp"-->
            <!--app:cardCornerRadius="8dp">-->

            <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:layout_margin="16dp"-->
                <!--android:gravity="center_horizontal|center_vertical">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--/>-->

            <!--</LinearLayout>-->

        <!--</android.support.v7.widget.CardView>-->

    <!--</GridLayout>-->



</LinearLayout>
